# Clasp

./: .env.example  .gitignore  AUDIT.md  CHANGES.md  CLASP-ESCROW-PRD.md  LICENSE  PIBRIDGE-ESCROW-PRD.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  firestore.rules  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx
components/: avatar.tsx  brand.tsx  chrome.tsx  countdown.tsx  donut.tsx  feedback.tsx  hero-trade-card.tsx  icons.tsx  money.tsx  open-link-sheet.tsx  share-card.tsx  sheet.tsx  splash.tsx  state-badge.tsx  tier-badge.tsx  tier-meter.tsx  timeline.tsx  trade-row.tsx  trust-badge.tsx
contract/: Cargo.toml  README.md
contract/deploy/: PI_TESTNET_DEPLOY.md  clasp_escrow.optimized.wasm
contract/src/: lib.rs  test.rs
contract/test_snapshots/test/: amount_above_cap_rejected.1.json  cannot_dispute_after_completion.1.json  dispute_settles_on_agreement.1.json  happy_path_completes_and_splits_fee.1.json  nuclear_burns_both_bonds_and_splits_5050.1.json  seller_cannot_fund_own_trade.1.json  ship_timeout_refunds_buyer.1.json  unfunded_expiry_returns_seller_bond.1.json
docs/: API.md  COMPLIANCE.md  CONTRACT.md  CT-SUBMISSION.md  DEPLOY.md  PRIVACY.md  TERMS.md
lib/: api.ts  chain.ts  client-api.ts  confetti.ts  env-guard.ts  errors.ts  escrow.ts  firebase.ts  format.ts  partners.ts  payment-audit.ts  payouts.ts  pi-client.ts  pi-payout.ts  pi-server.ts  rate-limit.ts  reconcile.ts  session.ts  store.ts  tiers.ts  types.ts  use-live-trade.ts  webhooks.ts
(+56 files in other folders)
